--- a/Tetris-Procesos-master/app/build.gradle
+++ b/Tetris-Procesos-master/app/build.gradle
@@ -31,11 +31,14 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:2.8.47"
     androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation ('androidx.test.espresso:espresso-core:3.2.0',{
+        exclude group:'com.android.support',module:'support-annotations'
+    })
     implementation 'com.google.firebase:firebase-core:17.2.0'
     implementation 'com.google.firebase:firebase-firestore:21.2.0'
-    compile 'com.frosquivel:magicalcamera:6.0.0'
+    implementation 'com.frosquivel:magicalcamera:6.0.0'
 }
 // Add the following line to the bottom of the file:
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
