--- a/Tetris-Procesos-master/build.gradle
+++ b/Tetris-Procesos-master/build.gradle
@@ -22,7 +22,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven{
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
