--- a/Tetris-Procesos-master/.travis.yml
+++ b/Tetris-Procesos-master/.travis.yml
@@ -30,10 +30,7 @@ before_deploy:
 - cd -
 - sh set_tags.sh
 script:
-- sonar-scanner
-- cd final
-- chmod +x gradlew
-- "./gradlew clean build"
+  - ./gradlew sonarqube
 deploy:
   provider: releases
   api_key:
