--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,11 @@ android:
 before_deploy:
 - cd -
 - sh set_tags.sh
-script:
-  - sonar-scanner
-  - cd Tetris-Procesos-master/app
-  - chmod +x gradlew
-  - ./gradlew sonarqube
+#script:
+ # - sonar-scanner
+  #- cd Tetris-Procesos-master/app
+  #- chmod +x gradlew
+  #- ./gradlew sonarqube
 deploy:
   provider: releases
   api_key:
