--- a/Tetris-Procesos-master/build.gradle
+++ b/Tetris-Procesos-master/build.gradle
@@ -19,11 +19,21 @@ plugins {
     id "org.sonarqube" version "2.8"
 }
 
-sonarqube {
+/*sonarqube {
     properties {
         property "sonar.projectKey", "zikram013_grupo8-CalidadCs"
     }
+}*/
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "zikram013_grupo8-CalidadCs"
+        property "sonar.organization", "zikram013"
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.login", "e5e185474c6ac28c375eee60851110d7c1fd4086"
+    }
 }
+
 allprojects {
     repositories {
         google()
