--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,9 @@ before_install:
   - chmod +x gradlew
   - yes | sdkmanager "platforms;android-29"
 script:
-  - ./gradlew clean
-  - ./gradlew assembleDebug
-  - ./gradlew assembleDebugAndroidTest
+  - Tetris-Procesos-master/gradlew clean
+  - Tetris-Procesos-master/gradlew assembleDebug
+  - Tetris-Procesos-master/gradlew assembleDebugAndroidTest
 #script:
  # - sonar-scanner
   #- cd Tetris-Procesos-master/app
