--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,8 @@ script:
   - .Tetris-Procesos-master/gradlew assembleDebugAndroidTest
 #script:
  # - sonar-scanner
-  #- cd Tetris-Procesos-master/app
-  #- chmod +x gradlew
+  - cd Tetris-Procesos-master/app
+  - chmod +x gradlew
   #- ./gradlew sonarqube
 deploy:
   provider: master
