--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ script:
 #script:
  # - sonar-scanner
   - cd Tetris-Procesos-master/app
-  - chmod +x ./gradlew
+  - chmod +x ./cd Tetris-Procesos-master/gradlew
   #- ./gradlew sonarqube
 deploy:
   provider: master
