--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   #- ./gradlew assembleDebug
   #- ./gradlew assembleDebugAndroidTest
 #script:
- - sonar-scanner
+ #- sonar-scanner
 
 
   -  ./gradlew sonarqube
