--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
  #- sonar-scanner
 
 
-  - chmod +x ./gradlew sonarqube
+  - ./gradlew sonarqube
 deploy:
   provider: master
   file: Tetris-Procesos-master/app/release/app-release.apk
