--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   - chmod +x Tetris-Procesos-master/gradlew
   - yes | sdkmanager "platforms;android-29"
 script:
-     - cd Tetris-Procesos-master/
+  - - cd Tetris-Procesos-master/
   - chmod +x ./gradlew
  # - ./gradlew clean
   #- ./gradlew assembleDebug
