--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ before_install:
   - chmod +x Tetris-Procesos-master/gradlew
   - yes | sdkmanager "platforms;android-29"
 script:
+  - - sonar-scanner
   - - cd Tetris-Procesos-master/
   - chmod +x ./gradlew
  # - ./gradlew clean
@@ -34,7 +35,7 @@ script:
  #- sonar-scanner
 
 
-  #- ./gradlew sonarqube
+  - ./gradlew sonarqube
 deploy:
   provider: master
   file: Tetris-Procesos-master/app/release/app-release.apk
