--- a/Tetris-Procesos-master/build.gradle
+++ b/Tetris-Procesos-master/build.gradle
@@ -3,12 +3,13 @@
 buildscript {
     repositories {
         google()
+        mavenCentral()
         jcenter()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
-
+        classpath 'org.ajoberstar:gradle-git:0.6.1'
         classpath 'com.google.gms:google-services:4.3.2'  // Google Services plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -47,5 +48,19 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+import org.ajoberstar.gradle.git.tasks.GitTag
+import org.ajoberstar.gradle.git.tasks.GitPush
+
+ext.yourTag = "REL-${project.version.toString()}"
+task createTag(type: GitTag) {
+    repoPath = rootDir
+    tagName = yourTag
+    message = "Application release ${project.version.toString()}"
+}
+
+task pushTag(type: GitPush, dependsOn: createTag) {
+    namesOrSpecs = [yourTag]
 }
 
