--- a/Tetris-Procesos-master/gradle.properties
+++ b/Tetris-Procesos-master/gradle.properties
@@ -20,6 +20,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 gradle=build -x lint
 
+org.gradle.daemon=false
+
 org.gradle.java.home=C\:\\Program Files\\Java\\jdk-13.0.2
 
 org.gradle.installDebug=true;
