--- a/Tetris-Procesos-master/app/build.gradle
+++ b/Tetris-Procesos-master/app/build.gradle
@@ -10,8 +10,15 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            debuggable true
+        }
+
         release {
             minifyEnabled true
             multiDexEnabled true
@@ -46,6 +53,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.2.3'
     implementation 'com.google.firebase:firebase-firestore:21.4.1'
     implementation 'com.frosquivel:magicalcamera:6.0.0'
+
+
 }
+
 // Add the following line to the bottom of the file:
-apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
+apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plu
