--- a/Tetris-Procesos-master/app/build.gradle
+++ b/Tetris-Procesos-master/app/build.gradle
@@ -53,9 +53,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.2.3'
     implementation 'com.google.firebase:firebase-firestore:21.4.1'
     implementation 'com.frosquivel:magicalcamera:6.0.0'
-
+    implementation 'com.google.code.gson:gson:2.8.2'
 
 }
-
+artifacts.add("default", file('libs/gson-2.6.2.jar'))
 // Add the following line to the bottom of the file:
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plu
